--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Consejos y habtios de vida saludable</title>
+<title>Consejos y habitos de vida saludable</title>
 <style type="text/css">
 body,td,th {
 	color: #000;
