agregar favicon index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ body {
 	font-family: Tahoma, Geneva, sans-serif;
 }
 </style>
+<link rel="icon" href="favicon.png" type="image/png">	
 </head>
 
 <body> 
