--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ body {
 }
 </style>
 <link rel="icon" href="favicon.png" type="image/png">	
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body> 
